<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="@dimen/main_layout_padding">


    <TextView
        android:id="@+id/settings_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/main_layout_padding"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/main_layout_padding"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/button_text"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/vector" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_layout_padding">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="@dimen/switch_size"
            android:layout_height="@dimen/switch_size"
            android:layout_gravity="end|center_vertical"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/night_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/setting_image_size"
            android:layout_height="@dimen/setting_image_size"

            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/default_image"
            app:srcCompat="@drawable/share" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/setting_image_size"
            android:layout_height="@dimen/setting_image_size"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/default_image"
            app:srcCompat="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_layout_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/forward"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_text_size" />

        <ImageView
            android:layout_width="@dimen/setting_image_size"
            android:layout_height="@dimen/setting_image_size"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/default_image"
            app:srcCompat="@drawable/forward" />

    </FrameLayout>
</LinearLayout>